@@ -1,7 +1,7 @@
 Changes
-examples/ex1.pl
-examples/ex2.pl
-examples/ex3.pl
+examples/simple_element_callback.pl
+examples/simple_element_indent.pl
+examples/simple_element_raw.pl
 inc/Module/Install.pm
 inc/Module/Install/AuthorRequires.pm
 inc/Module/Install/AuthorTests.pm
